# micron

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: export.rs  login.rs  mail.rs  main.rs  migrate.rs  user.rs  util.rs
demo/: Cargo.toml  saasbase.toml
demo/src/: main.rs  partial.rs
demo/templates/pages/: home.html  login.html  register.html  summary.html
demo/templates/pages/app/: list.html  single.html
demo/templates/pages/machine/: list.html  single.html
demo/templates/pages/source/: list.html  single.html
demo/templates/partials/: charts-summary.html  footer.html  head.html  modals.html  navbar.html  sidebar.html
examples/chat/: Cargo.toml  README.md
examples/chat/src/: main.rs
examples/chat/templates/pages/: home.html
examples/chat/templates/partials/: navbar.html  scripts.html
examples/saas/: Cargo.toml  README.md  micron.toml
examples/saas/assets/css/: tabler.min.css
examples/saas/src/: main.rs
examples/saas/templates/partials/: footer.html  head.html
lib/: Cargo.toml
lib/examples/: config_file.rs  embed.rs  oauth.rs  quick.rs
lib/src/: comment.rs  config.rs  credits.rs  error.rs  image.rs  init.rs  lib.rs  mock.rs  order.rs  post.rs  product.rs  routes.rs  tracing.rs  util.rs
lib/src/api/: mod.rs
lib/src/auth/: login.rs  mod.rs
lib/src/axum/: askama.rs  auth.rs  comment.rs  error.rs  image.rs  mailing.rs  mod.rs  stripe.rs  user.rs
lib/src/axum/auth/: confirm.rs  db.redb  login.rs  signup.rs
lib/src/axum/auth/oauth/: discord.rs  facebook.rs  github.rs  google.rs  mod.rs
lib/src/axum/extract/: mod.rs  user.rs
lib/src/db/: mod.rs  redb.rs  sled.rs  sqlite.rs
lib/src/email/: list.rs  mod.rs
lib/src/i18n/: mod.rs
lib/src/oauth/: discord.rs  facebook.rs  github.rs  google.rs  mod.rs
lib/src/payment/: mod.rs  stripe.rs
lib/src/platform/: api.rs  mod.rs
lib/src/user/: mod.rs  subscription.rs
