[package]
name = "micron-cli"
version = "0.1.0"
edition = "2021"
authors = ["Adam Wierchoła <adam@wierchola.com>"]
default-run = "micron"

[[bin]]
name = "micron"
path = "src/main.rs"

[dependencies]
micron = { path = "../lib" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"]}
tokio-util = "0.7.11"
tokio-stream = "0.1"

reqwest = { version = "0.12.4", features = ["json"] }

clap = { version = "4", features = ["string"] }
directories = "4"
rpassword = "7.3.1"

anyhow = "1.0.86"

uuid = "1.8.0"

serde = "1.0.217"
serde_json = "1.0.138"
bincode = "1.3.3"
pot = "3.0.0"

sled = { version = "0.34.7" }
