[package]
name = "saasbase"
version = "0.1.0"
edition = "2021"
description = "Build saas fast. Repeat."

[features]
default = ["axum", "askama", "sled"]

axum = ["dep:axum", "axum-extra"]
sqlite = ["tokio-rusqlite", "rusqlite"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
axum = { version = "0.7", features = ["macros"], optional = true }
axum-extra = { version = "0.9.2", features = ["cookie-private"], optional = true }
axum-auth = "0.7.0"
cookie = { version = "0.18.1", features = ["private"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
askama = { version = "0.12.1", optional = true }
reqwest = { version = "0.12.4", features = ["json"] }
http = "1.1.0"
mime = "0.3.17"
url = "2"

sled = { version = "0.34.7", optional = true }
redb = { version = "2.0.0", optional = true }
tokio-rusqlite = { version = "0.5.1", optional = true }
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }
redis = { version = "0.25.3", optional = true }
tikv-client = { version = "0.3", optional = true }
fnv = "1.0.7"
pot = "3.0.0"
bincode = "1.3.3"

rusty-money = { version = "0.4", features = ["iso"] }
rust_decimal = "1.28"
rust_decimal_macros = "1.28"
async-stripe = { version = "0.37", features = ["runtime-tokio-hyper"] }

serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.8"
config = "0.14.0"
log = "0.4.21"
strum = { version = "0.25", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "smallvec"] }
tracing-log = "0.1"
tracing-loki = "0.2"
yansi = "0.5"

thiserror = "1"
backtrace = "0.3"

oauth2 = "4.4.2"
argon2 = { version = "0.5.2", features = ["std"] }

rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] } 
semver = "1.0.22"

image = { version = "0.24", default-features = false, features = ["png"] }
identicon-rs = { git = "https://github.com/adamsky/identicon-rs" }

lettre = "0.11"

[dev-dependencies]
anyhow = "1.0.82"
askama = "0.11.1"

tower-serve-static = { git = "https://github.com/jannik4/tower-serve-static", version = "0.1.1" }
include_dir = "0.7.0"
